# teleop_slave

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  package.xml  patch_curobo.py
config/: fr5_tracker_teleop.yaml
external_snapshots/teleop_master/: .gitignore  CLAUDE.md  Readme.md  TeleopMasterClient.cpp  TeleopMasterClient.hpp  TeleopMasterClient.vcxproj.filters.xml  TeleopMasterClient.vcxproj.xml  test_udp_send.py
external_snapshots/teleop_master/ManusSDK/lib/: ManusSDK.lib
external_snapshots/teleop_master/PlatformSpecific/Windows/: ClientPlatformSpecific.cpp  ClientPlatformSpecificTypes.hpp
fingertip_ik_retargeter/: README.md  package.xml  setup.cfg  setup.py
fingertip_ik_retargeter/config/: ik_params.yaml
fingertip_ik_retargeter/fingertip_ik_retargeter/: calibrate_ik_frame.py  calibrate_ik_multipose.py  dg5f_ik_solver.py  fingertip_ik_node.py  frame_calibration.py  generate_kapandji_poses.py  manus_frames.py  offline_ik_test.py
fingertip_ik_retargeter/fingertip_ik_retargeter/data/: dg5f_right_local.urdf
fingertip_ik_retargeter/launch/: fingertip_ik.launch.py
fingertip_ik_retargeter/tests/: test_frame_calibration.py
include/teleop_slave/: fairino_controller_node.hpp  fairino_lowlevel_controller_node.hpp  fairino_robot_interface.hpp  fairino_slave_node.hpp  master_bridge_node.hpp  tesollo_slave_node.hpp
keyvector_retargeter/: README.md  package.xml  setup.cfg  setup.py
keyvector_retargeter/config/: keyvector_calibrated.yaml  keyvector_params.yaml
keyvector_retargeter/keyvector_retargeter/: __init__.py  calibrate_keyvector.py  calibration.py  dg5f_fk.py  dg5f_model.py  joint_command_filter.py  keyvector_loss.py  keyvector_retarget_node.py  keyvector_solver.py  manus_joints.py  manus_landmarks.py
keyvector_retargeter/launch/: keyvector_retarget.launch.py
keyvector_retargeter/tests/: test_calibration.py  test_dg5f_model.py  test_joint_command_filter.py  test_keyvector_loss.py  test_keyvector_node.py  test_keyvector_solver.py  test_manus_joints.py  test_manus_landmarks.py
launch/: teleop_rviz.launch.py
libfairino/lib/: libfairino.so.2
resources/external_patches/: delto_m_ros2_dg5f_right.patch  fairino-cpp-sdk.patch  frcobot_ros2.patch
scripts/: debug_fingertips.py
src/: fairino_controller_node.cpp  fairino_lowlevel_controller_node.cpp  fairino_slave_node.cpp  fr5_teleop_utils.cpp  master_bridge.cpp  master_bridge_node.cpp  tesollo_slave_node.cpp
teleop_slave/: CMakeLists.txt  README.md  package.xml
teleop_slave/config/: fr5_tracker_calibration.yaml  fr5_tracker_teleop.yaml
teleop_slave/include/teleop_slave/: butterworth_filter.hpp  fairino_lowlevel_controller_node.hpp  fairino_robot_interface.hpp  fairino_slave_node.hpp  joint_target_smoother.hpp  master_bridge_node.hpp  ruckig_joint_trajectory_generator.hpp  teleop_csv_logger_node.hpp
teleop_slave/scripts/: plot_arm_pipeline.py  plot_manus_jitter.py
teleop_slave/src/: fairino_lowlevel_controller_node.cpp  fairino_robot_interface.cpp  fairino_slave_node.cpp  fr5_teleop_utils.cpp  master_bridge_node.cpp  teleop_csv_logger_node.cpp  tesollo_slave_node.cpp
teleop_slave/test/: test_fr5_teleop_utils.cpp
teleop_slave_curobo/: CMakeLists.txt  README.md  package.xml
teleop_slave_curobo/config/: fr5.yml  fr5_tracker_teleop.yaml
teleop_slave_curobo/include/teleop_slave/: fairino_lowlevel_controller_node.hpp  fairino_robot_interface.hpp  fairino_slave_node.hpp  fr5_teleop_utils.hpp  joint_target_smoother.hpp  kalman_filter.hpp  tesollo_slave_node.hpp
teleop_slave_curobo/launch/: fr5_curobo_teleop.launch.py
teleop_slave_curobo/scripts/: curobo_motion_generator_node.py
teleop_slave_curobo/src/: fairino_lowlevel_controller_node.cpp  fairino_robot_interface.cpp  fairino_slave_node.cpp  fr5_teleop_utils.cpp  manus_retarget_vendor
teleop_slave_curobo/teleop_slave/: CMakeLists.txt  README.md  package.xml
teleop_slave_curobo/teleop_slave/config/: fr5_tracker_teleop.yaml
teleop_slave_curobo/teleop_slave/include/teleop_slave/: cartesian_pose_stream_interpolator.hpp  fairino_lowlevel_controller_node.hpp  fr5_teleop_utils.hpp
teleop_slave_curobo/teleop_slave/scripts/: calibrate_tracker_frame.py
teleop_slave_curobo/teleop_slave/src/: fairino_lowlevel_controller_node.cpp  fairino_slave_node.cpp  manus_retarget_vendor.py  master_bridge_node.cpp
teleop_slave_curobo/test/: test_fr5_teleop_utils.cpp  test_kalman_filter.cpp
test/: test_fr5_teleop_utils.cpp
