<?xml version="1.0"?>
<package format="3">
  <name>fingertip_ik_retargeter</name>
  <version>0.1.0</version>
  <description>Fingertip IK retargeting from Manus VR glove to Tesollo DG-5F hand using PyBullet SDLS</description>
  <maintainer email="nrel@todo.com">nrel</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
